--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="index.html" class="nav-link">Главная</a>
             <a href="#task" class="nav-link">Задание</a>
             <a href="#contact" class="nav-link">Контакт</a>
+            <a href="Cards_pair/index.html" class="nav-link">Игра "Найди пару"</a>
         </div>
     </header>
 
